2.4.11
- add 3 rings
- add 3 slot-adding curios
- add 8 traits
- make fiery trait more lenient
- add config to allow exponential health/damage
- add config to allow disabling orb

2.4.10
- Fix regen calling potion test every tick
- Fix Invisible apply effects repeatedly
- Fix name plates being rendered from very far away
- Fix trait generation
- Add Cataclysm compat

2.4.9
- bosses will no longer have undead trait
- now trait whitelist/blacklist are all tag based
- allow config to disable all individual traits
- display spawn requirement
- improve texture

2.4.8
- Add 4 rings
- add 2 hand curio
- add witch wand
- no longer add level to name
- Make mobs drop more exp

2.4.7
- Add bottle of curse and bottle of sanity
- Add curse of 7 sins (7 items)
- Add patchouli for items
- Improve JEI tooltip visuals
- Fix soul burner effect never ends
- Increase level requirements for some traits

2.4.6
- Fix MobCapLootCondition
- Add weapon config
- Add entity config, remove entityMap from difficulty config
- Add multi-trait conditions JEI support and examples
- Add default configs for Twilight Forest mobs

2.4.5
- Fix chunk not marked dirty when using hostility orb

2.4.4
- Change default config values (delete old config file to take effect)
- Add command system
- Increase levels required by traits for most traits
- Fix the bug that spawner might spawn mobs with no traits if trait spawn chance is not 100%
- Change Invisibility drop from potion to phantom membrane
- Mobs that cannot attack nearest player will not have a level
- Adds default dimension difficulty
- Add options for minimum level to be bypassed by difficulty clearing or not
- Add suppression mechanics: mobs will randomly terminate trait generation with a chance
- Mobs with non-zero minimum level will not be affected by supression, apply chance, and trait chance

2.4.3
- Regenerate will not appear on mobs immune to effects
- Tune down difficulty in general
- Reduce chance for Weakness and Levitation to appear

2.4.2